Some corrections: Message div should be visible irrespective of whether the page is scrolled up or down.

--- a/site_media/css/base.css
+++ b/site_media/css/base.css
@@ -515,3 +515,6 @@ a#continue  {
     text-align: center;
     line-height: 2em;
 }
+.err	{
+    color: #f00;
+}
